--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title> Ethan's Webpage </title>
+	<title> Ethan Zhou </title>
 </head>
 <body>
-	Hello World! <br>
-
-	My Fav Movies:
-	<ul> 
-		<li> <a href="https://www.starwars.com/">Star Wars </a> </li>
-		<li> The Dark Knight</li>
-		<li> Avengers</li>
+	My Technical Skills:
+	<ul>
+		<li> Java </li>
+		<li> Python </li>
+		<li> HTML </li>
+		<li> Microsoft </li>
 	</ul>
 </body>
 </html>
