--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<li> Java </li>
 		<li> Python </li>
 		<li> HTML </li>
-		<li> Microsoft </li>
+		<li> Microsoft Applications </li>
 	</ul>
 </body>
 </html>
