--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
 	<title> Ethan Zhou </title>
 </head>
 <body>
-	My Technical Skills:
+	<h1> Ethan Zhou </h1> <br>
+	<a href="https://docs.google.com/document/d/1zE1A-9RycrC1Op0f7KsJM7QSV4Miz-RlQSWNaEYAQtY/edit?usp=sharing"> The Resume </a> <br>
+	Technical Skills:
 	<ul>
 		<li> Java </li>
 		<li> Python </li>
 		<li> HTML </li>
-		<li> Microsoft Applications </li>
+		<li> C </li>
+		<li> Microsoft Office</li>
 	</ul>
 </body>
 </html>
