--- a/index.html
+++ b/index.html
@@ -15,5 +15,11 @@
 		<li> C </li>
 		<li> Microsoft Office</li>
 	</ul>
+	<a href="https://bl.ocks.org/zethan88"> Bl.ocks </a> <br>
+	Assignment 2:
+	<ul>
+		<li> <a href="https://bl.ocks.org/zethan88/dddd3c3cd8a9bc22a0d38a15c0177e32"> A2 Bar Graph </a> </li>
+		<li> </li>
+		<li> </li>
 </body>
 </html>
