--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	Assignment 2:
 	<ul>
 		<li> <a href="https://bl.ocks.org/zethan88/dddd3c3cd8a9bc22a0d38a15c0177e32"> A2 Bar Graph </a> </li>
-		<li> </li>
+		<li> <a href="https://bl.ocks.org/zethan88/91c0b3409624b98c294d20e007fb3b96"> A2 Dot Plot </a> </li>
 		<li> </li>
 </body>
 </html>
