--- a/index.html
+++ b/index.html
@@ -21,5 +21,12 @@
 		<li> <a href="https://bl.ocks.org/zethan88/dddd3c3cd8a9bc22a0d38a15c0177e32"> A2 Bar Graph </a> </li>
 		<li> <a href="https://bl.ocks.org/zethan88/91c0b3409624b98c294d20e007fb3b96"> A2 Dot Plot </a> </li>
 		<li> </li>
+	</ul>
+	Assignment 3:
+	<ul>
+		<li>  </li>
+		<li>  </li>
+		<li>  </li>
+	</ul>
 </body>
 </html>
