--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</ul>
 	Assignment 3:
 	<ul>
-		<li> <a href="https://bl.ocks.org/zethan88/b2052b63f90718f9b43430b5972a34c3"> A3 Historgram </a> </li>
+		<li> <a href="https://bl.ocks.org/zethan88/b2052b63f90718f9b43430b5972a34c3"> A3 Histogram </a> </li>
 		<li>  </li>
 		<li>  </li>
 	</ul>
