--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	Assignment 3:
 	<ul>
 		<li> <a href="https://bl.ocks.org/zethan88/b2052b63f90718f9b43430b5972a34c3"> A3 Histogram </a> </li>
-		<li>  </li>
+		<li> <a href="https://bl.ocks.org/zethan88/6729326986a3e5898405cbcb8ddc8287"> A3 Box Plot </a> </li>
 		<li>  </li>
 	</ul>
 </body>
