--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<ul>
 		<li> <a href="https://bl.ocks.org/zethan88/dddd3c3cd8a9bc22a0d38a15c0177e32"> A2 Bar Graph </a> </li>
 		<li> <a href="https://bl.ocks.org/zethan88/91c0b3409624b98c294d20e007fb3b96"> A2 Dot Plot </a> </li>
-		<li> </li>
+		<li> <a href="https://bl.ocks.org/zethan88/36db589fb6bede75dc45aba15edec9f8"> A2 Heatmap </a> </li>
 	</ul>
 	Assignment 3:
 	<ul>
