--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
 		<li> <a href="https://bl.ocks.org/zethan88/6729326986a3e5898405cbcb8ddc8287"> A3 Box Plot </a> </li>
 		<li>  </li>
 	</ul>
+	Assignment 4:
+	<ul>
+		<li> <a href="https://bl.ocks.org/zethan88/64e8dad3de5e1b8403ce7995d0caf7c4"> A4 Bar Chart Race </a> </li>
+	</ul>
 </body>
 </html>
