--- a/index.html
+++ b/index.html
@@ -32,5 +32,9 @@
 	<ul>
 		<li> <a href="https://bl.ocks.org/zethan88/64e8dad3de5e1b8403ce7995d0caf7c4"> A4 Bar Chart Race </a> </li>
 	</ul>
+	Assignment 5:
+	<ul>
+		<li> <a href="https://bl.ocks.org/zethan88/bbc101d85df5e3f5bf18e00fea421b7b"> A5 Bar Chart In D3 </a> </li>
+	</ul>
 </body>
 </html>
