--- a/index.html
+++ b/index.html
@@ -35,5 +35,10 @@
 	<ul>
 		<li> <a href="https://bl.ocks.org/zethan88/bbc101d85df5e3f5bf18e00fea421b7b"> A5 Bar Chart In D3 </a> </li>
 	</ul>
+	Assignment 6:
+	<ul>
+		<li> <a href="https://bl.ocks.org/zethan88/a08e756e2760b72f8844ccd725a8ab77"> A6 Bubble Chart In D3 </a> </li>
+		<li> <a href=""> A6 Line Chart In D3 </a> </li>
+	</ul>
 </body>
 </html>
