--- a/index.html
+++ b/index.html
@@ -39,5 +39,10 @@
 	<ul>
 		<li> <a href="https://bl.ocks.org/zethan88/a08e756e2760b72f8844ccd725a8ab77"> A6 Bubble Chart In D3 </a> </li>
 	</ul>
+	Assignment 7:
+	<ul>
+		<li> <a href="https://bl.ocks.org/zethan88/299d7434904c2fe65f6f9afc57746438"> A7 Sequential Colored Bar Chart In D3 </a> </li>
+		<li> <a href=""> A7 Diverging Colored Bar Chart In D3 </a> </li>
+	</ul>
 </body>
 </html>
