--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	Assignment 7:
 	<ul>
 		<li> <a href="https://bl.ocks.org/zethan88/299d7434904c2fe65f6f9afc57746438"> A7 Sequential Colored Bar Chart In D3 </a> </li>
-		<li> <a href=""> A7 Diverging Colored Bar Chart In D3 </a> </li>
+		<li> <a href="https://bl.ocks.org/zethan88/f5e0020b8bd3584dee16ddafee1226c2"> A7 Diverging Colored Bar Chart In D3 </a> </li>
 	</ul>
 </body>
 </html>
