--- a/index.html
+++ b/index.html
@@ -44,5 +44,9 @@
 		<li> <a href="https://bl.ocks.org/zethan88/299d7434904c2fe65f6f9afc57746438"> A7 Sequential Colored Bar Chart In D3 </a> </li>
 		<li> <a href="https://bl.ocks.org/zethan88/f5e0020b8bd3584dee16ddafee1226c2"> A7 Diverging Colored Bar Chart In D3 </a> </li>
 	</ul>
+	Assignment 8:
+	<ul>
+		<li> <a href="http://bl.ocks.org/zethan88/5271ecb358530f877966c2a40ff9809d"> A8 Node-Link Diagram In D3 </a> </li>
+		<li> <a href=""> A8 Adjacency Matrix In D3 </a> </li>
 </body>
 </html>
