--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
 	Assignment 8:
 	<ul>
 		<li> <a href="http://bl.ocks.org/zethan88/5271ecb358530f877966c2a40ff9809d"> A8 Node-Link Diagram In D3 </a> </li>
-		<li> <a href=""> A8 Adjacency Matrix In D3 </a> </li>
+		<li> <a href="http://bl.ocks.org/zethan88/7dec8f4d8e2e771d50ddbdc14a44d652"> A8 Adjacency Matrix In D3 </a> </li>
 </body>
 </html>
