--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 		<li> C </li>
 		<li> Microsoft Office</li>
 	</ul>
+	Projects:
+	<ul>
+		<li> <a href="https://zethan88.github.io/sf-shock-owl-highlights/"> 2019 SF Shocks OWL Highlights </a> </li>
+	</ul><br>
+	
 	<a href="https://bl.ocks.org/zethan88"> Bl.ocks </a> <br>
 	Assignment 2:
 	<ul>
@@ -48,5 +53,10 @@
 	<ul>
 		<li> <a href="http://bl.ocks.org/zethan88/5271ecb358530f877966c2a40ff9809d"> A8 Node-Link Diagram In D3 </a> </li>
 		<li> <a href="http://bl.ocks.org/zethan88/7dec8f4d8e2e771d50ddbdc14a44d652"> A8 Adjacency Matrix In D3 </a> </li>
+	</ul>
+	Assignment 9:
+	<ul>
+		<li> <a href="https://bl.ocks.org/zethan88/06aae078743ab6ac44dbf2667aaa7091"> A9 Interaction In D3 </a> </li>
+	</ul>
 </body>
 </html>
