--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<li> <a href="https://zethan88.github.io/sf-shock-owl-highlights/"> 2019 SF Shocks OWL Highlights </a> </li>
 	</ul>
 	
-	<a href="https://bl.ocks.org/zethan88"> Bl.ocks </a> <br>
+	Bl.ocks Page <a href="https://bl.ocks.org/zethan88"> Here </a> <br>
 	Assignment 2:
 	<ul>
 		<li> <a href="https://bl.ocks.org/zethan88/dddd3c3cd8a9bc22a0d38a15c0177e32"> A2 Bar Graph </a> </li>
