--- a/index.html
+++ b/index.html
@@ -62,5 +62,9 @@
 	<ul>
 		<li> <a href="https://bl.ocks.org/zethan88/e3268d58882a4905548b9993684027d6"> A10 Choropleth In D3 </a> </li>
 	</ul>
+	Assignment 11:
+	<ul>
+		<li> <a href="https://bl.ocks.org/zethan88/fc7f2fb31b861a3bc8611900b2a48c72"> A11 Black Hat White Hat </a> </li>
+	<ul>
 </body>
 </html>
